add session token without IAM policy
fix: doc of getting started with session token
fix: temporary session token
fix: find session token in  the env variables
fix: add S3_SESSION_TOKEN in the docker-entrypoind.d
fix: docs of getting started with session token

fix: check if session token presents

--- a/common/etc/nginx/nginx.conf
+++ b/common/etc/nginx/nginx.conf
@@ -11,6 +11,7 @@ load_module modules/ngx_http_xslt_filter_module.so;
 # Preserve S3 environment variables for worker threads
 env S3_ACCESS_KEY_ID;
 env S3_SECRET_KEY;
+env S3_SESSION_TOKEN;
 env S3_BUCKET_NAME;
 env S3_SERVER;
 env S3_SERVER_PORT;
