Move AWS signature auth to new library (#109)
feat: AWS signature v2 lib
fix: signature var name
docs: integrating with AWS signature library
fix: comment for AWS signature lib
feat: AWS signature v4 lib
fix: remove unused code in test script
fix: signature V4 params
fix: canonical request params
feat: add parse array func into utils.js and unit test
feat: AWS credentials lib for AWS signature
feat: read & write credentials for AWS Signature
chore: add todo
fix: remove utils.js from default.conf
fix: comment for readCredentials()
fix: aws credentials in default.conf
fix: aws_credentials.js test
fix: end of if statement
fix: unit test for s3gateway and aws credentials
fix: unit test for session token
feat: reusable function for unit test w/ w/o session token
fix: remove unnecessary comments
chore: add description for NJS files

--- a/oss/etc/nginx/conf.d/gateway/server_variables.conf
+++ b/oss/etc/nginx/conf.d/gateway/server_variables.conf
@@ -1,9 +1,9 @@
-# Variable indicating to the s3gateway.js script that singing key
+# Variable indicating to the awssig4.js script that singing key
 # caching is turned off. This feature uses the keyval store, so it
 # is only enabled when using NGINX Plus.
 set $cache_signing_key_enabled 0;
 
-# Variable indicating to the s3gateway.js script that session token
+# Variable indicating to the awscredentials.js script that session token
 # caching is turned on. This feature uses the keyval store, so it
 # is only enabled when using NGINX Plus.
 set $cache_instance_credentials_enabled 0;
