Add curl to container images
Curl is now explicitly added to container images so that
startup scripts can detect the presence of various AWS
metadata configuration available from AWS internal
endpoints.

Signed-off-by: Elijah Zupancic <e.zupancic@f5.com>

--- a/Dockerfile.plus
+++ b/Dockerfile.plus
@@ -28,7 +28,7 @@ RUN set -eux \
     adduser --system --disabled-login --ingroup nginx --no-create-home --home /nonexistent --gecos "nginx user" --shell /bin/false --uid 101 nginx; \
     apt-get -qq update; \
     apt-get -qq upgrade --yes; \
-    apt-get -qq install --yes ca-certificates; \
+    apt-get -qq install --yes ca-certificates curl; \
     sh -a /usr/local/bin/add_nginx_plus_repo.sh; \
     rm /usr/local/bin/add_nginx_plus_repo.sh; \
     apt-get -qq update; \
