--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -15,8 +15,8 @@ services:
     restart: "no"
     environment:
       S3_BUCKET_NAME: "bucket-1"
-      S3_ACCESS_KEY_ID: "AKIAIOSFODNN7EXAMPLE"
-      S3_SECRET_KEY: "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
+      AWS_ACCESS_KEY_ID: "AKIAIOSFODNN7EXAMPLE"
+      AWS_SECRET_ACCESS_KEY: "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
       S3_SERVER: "minio"
       S3_SERVER_PORT: "9000"
       S3_SERVER_PROTO: "http"
