--- a/common/etc/nginx/nginx.conf
+++ b/common/etc/nginx/nginx.conf
@@ -9,9 +9,9 @@ load_module modules/ngx_http_js_module.so;
 load_module modules/ngx_http_xslt_filter_module.so;
 
 # Preserve S3 environment variables for worker threads
-env S3_ACCESS_KEY_ID;
-env S3_SECRET_KEY;
-env S3_SESSION_TOKEN;
+env AWS_ACCESS_KEY_ID;
+env AWS_SECRET_ACCESS_KEY;
+env AWS_SESSION_TOKEN;
 env S3_BUCKET_NAME;
 env S3_SERVER;
 env S3_SERVER_PORT;
