--- a/common/etc/nginx/templates/default.conf.template
+++ b/common/etc/nginx/templates/default.conf.template
@@ -1,4 +1,4 @@
-js_import /etc/nginx/include/awscredentials.js;
+js_import /etc/nginx/include/awssig/core/awscredentials.js;
 js_import /etc/nginx/include/s3gateway.js;
 
 # We include only the variables needed for the authentication signatures that
@@ -88,7 +88,7 @@ server {
 
     location /aws/credentials/retrieve {
         internal;
-        js_content s3gateway.fetchCredentials;
+        js_content awscredentials.fetchCredentials;
 
         include /etc/nginx/conf.d/gateway/js_fetch_trusted_certificate.conf;
     }
