feat: payload hash func, default host name var, common var for AWS credentials and debug
- Move reusable functions of fectching credentials into awscredentials.js
- Replace name of env variables of AWS credentials and debug to support common AWS signature lib for multiple services in AWS
- Add a NJS var of default host name to be used for Role Session Name at multiple services in AWS
- Add a payload hash function to support multiple services in AWS such as S3 and Lambda, and it can be used for not only GET but also POST method.

--- a/common/etc/nginx/nginx.conf
+++ b/common/etc/nginx/nginx.conf
@@ -9,16 +9,16 @@ load_module modules/ngx_http_js_module.so;
 load_module modules/ngx_http_xslt_filter_module.so;
 
 # Preserve S3 environment variables for worker threads
-env S3_ACCESS_KEY_ID;
-env S3_SECRET_KEY;
-env S3_SESSION_TOKEN;
+env AWS_ACCESS_KEY_ID;
+env AWS_SECRET_ACCESS_KEY;
+env AWS_SESSION_TOKEN;
 env S3_BUCKET_NAME;
 env S3_SERVER;
 env S3_SERVER_PORT;
 env S3_SERVER_PROTO;
 env S3_REGION;
 env AWS_SIGS_VERSION;
-env S3_DEBUG;
+env DEBUG;
 env S3_STYLE;
 env ALLOW_DIRECTORY_LIST;
 env PROVIDE_INDEX_PAGE;
