--- a/common/etc/nginx/templates/gateway/v4_js_vars.conf.template
+++ b/common/etc/nginx/templates/gateway/v4_js_vars.conf.template
@@ -1,4 +1,7 @@
 # This header is needed when doing v4 signature authentication. It
 # specifies the timestamp in which the signature was generated and is used with
 # the x-amz-date header.
-js_set $awsDate s3gateway.awsHeaderDate;
+js_import /etc/nginx/include/awssig4.js;
+
+js_set $awsDate         awssig4.awsHeaderDate;
+js_set $awsPayloadHash  awssig4.awsHeaderPayloadHash;
