Add support for prefix string to dir list results
Co-authored-by: Elijah Zupancic <e.zupancic@f5.com>

--- a/Dockerfile.buildkit.plus
+++ b/Dockerfile.buildkit.plus
@@ -11,6 +11,7 @@ ENV PROXY_CACHE_VALID_OK "1h"
 ENV PROXY_CACHE_VALID_NOTFOUND "1m"
 ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
 ENV CORS_ENABLED 0
+ENV DIRECTORY_LISTING_PATH_PREFIX ""
 
 COPY plus/usr /usr
 
