Cache configuration via ENV
- made cache config as template
- added ENV variables

--- a/Dockerfile.buildkit.plus
+++ b/Dockerfile.buildkit.plus
@@ -5,10 +5,8 @@ ENV NGINX_VERSION        1.23.4
 ENV NJS_VERSION          29+0.7.12-1
 ENV XSLT_VERSION         29-1
 
-ENV PROXY_CACHE_VALID_OK "1h"
-ENV PROXY_CACHE_VALID_NOTFOUND "1m"
-ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
-
+ENV PROXY_CACHE_MAX_SIZE "10g"
+ENV PROXY_CACHE_INACTIVE "60m"
 ENV PROXY_CACHE_VALID_OK "1h"
 ENV PROXY_CACHE_VALID_NOTFOUND "1m"
 ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
