--- a/Dockerfile.oss
+++ b/Dockerfile.oss
@@ -3,6 +3,8 @@ FROM nginx:1.24.0
 ENV NGINX_VERSION "1.24.0"
 ENV NJS_VERSION   0.7.12
 
+ENV PROXY_CACHE_MAX_SIZE "10g"
+ENV PROXY_CACHE_INACTIVE "60m"
 ENV PROXY_CACHE_VALID_OK "1h"
 ENV PROXY_CACHE_VALID_NOTFOUND "1m"
 ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
