--- a/common/etc/nginx/nginx.conf
+++ b/common/etc/nginx/nginx.conf
@@ -23,6 +23,8 @@ env S3_STYLE;
 env ALLOW_DIRECTORY_LIST;
 env PROVIDE_INDEX_PAGE;
 env APPEND_SLASH_FOR_POSSIBLE_DIRECTORY;
+env PROXY_CACHE_MAX_SIZE;
+env PROXY_CACHE_INACTIVE;
 env PROXY_CACHE_VALID_OK;
 env PROXY_CACHE_VALID_NOTFOUND;
 env PROXY_CACHE_VALID_FORBIDDEN;
@@ -49,14 +51,6 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
-
-    # Settings for S3 cache
-    proxy_cache_path /var/cache/nginx/s3_proxy
-        levels=1:2
-        keys_zone=s3_cache:10m
-        max_size=10g
-        inactive=60m
-        use_temp_path=off;
 
     include /etc/nginx/conf.d/*.conf;
 }
