--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -28,6 +28,8 @@ services:
       APPEND_SLASH_FOR_POSSIBLE_DIRECTORY:
       AWS_SIGS_VERSION:
       STATIC_SITE_HOSTING:
+      PROXY_CACHE_MAX_SIZE: "10g"
+      PROXY_CACHE_INACTIVE: "60m"
       PROXY_CACHE_VALID_OK: "1h"
       PROXY_CACHE_VALID_NOTFOUND: "1m"
       PROXY_CACHE_VALID_FORBIDDEN: "30s"
