--- a/settings.example
+++ b/settings.example
@@ -12,6 +12,8 @@ AWS_SIGS_VERSION=4
 ALLOW_DIRECTORY_LIST=false
 PROVIDE_INDEX_PAGE=false
 APPEND_SLASH_FOR_POSSIBLE_DIRECTORY=false
+PROXY_CACHE_MAX_SIZE=10g
+PROXY_CACHE_INACTIVE=60m
 PROXY_CACHE_VALID_OK=1h
 PROXY_CACHE_VALID_NOTFOUND=1m
 PROXY_CACHE_VALID_FORBIDDEN=30s
