--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -35,14 +35,15 @@ services:
       PROXY_CACHE_VALID_FORBIDDEN: "30s"
 
   minio:
-    image: "minio/minio:RELEASE.2021-02-19T04-38-02Z"
+    image: quay.io/minio/minio:RELEASE.2023-06-09T07-32-12Z
     ports:
       - "9090:9000/tcp"
     restart: "no"
-    command: "server --address :9000 /data"
+    command: minio server /data
     environment:
-      MINIO_ACCESS_KEY: "AKIAIOSFODNN7EXAMPLE"
-      MINIO_SECRET_KEY: "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
+      MINIO_ADDRESS: :9000
+      MINIO_ROOT_USER: "AKIAIOSFODNN7EXAMPLE"
+      MINIO_ROOT_PASSWORD: "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
       MINIO_REGION_NAME: "us-east-1"
       MINIO_DOMAIN: "minio"
       MINIO_BROWSER: "off"
