Add new var to example settings and getting_started.

--- a/settings.example
+++ b/settings.example
@@ -18,3 +18,4 @@ PROXY_CACHE_INACTIVE=60m
 PROXY_CACHE_VALID_OK=1h
 PROXY_CACHE_VALID_NOTFOUND=1m
 PROXY_CACHE_VALID_FORBIDDEN=30s
+STRIP_LEADING_DIRECTORY_PATH=/somepath
