--- a/common/etc/nginx/templates/default.conf.template
+++ b/common/etc/nginx/templates/default.conf.template
@@ -326,7 +326,7 @@ server {
 
     location @trailslash {
         # 302 to request without slashes
-        rewrite ^ $scheme://$http_host$request_uri/ redirect;
+        rewrite ^ $scheme://$http_host$uri/$is_args$query_string redirect;
     }
 
     # Provide a hint to the client on 405 errors of the acceptable request methods
