corect njs tag again

--- a/Dockerfile.oss
+++ b/Dockerfile.oss
@@ -1,7 +1,7 @@
 FROM nginx:1.25.3
 
 ENV NGINX_VERSION "1.25.3"
-ENV NJS_VERSION   "0.8.2-1"
+ENV NJS_VERSION   "0.8.2"
 
 ENV PROXY_CACHE_MAX_SIZE "10g"
 ENV PROXY_CACHE_INACTIVE "60m"
