add tests for STRIP_LEADING_DIRECTORY_PATH

--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
       ALLOW_DIRECTORY_LIST:
       PROVIDE_INDEX_PAGE:
       APPEND_SLASH_FOR_POSSIBLE_DIRECTORY:
+      STRIP_LEADING_DIRECTORY_PATH:
       AWS_SIGS_VERSION:
       STATIC_SITE_HOSTING:
       PROXY_CACHE_MAX_SIZE: "10g"
