--- a/common/etc/nginx/templates/default.conf.template
+++ b/common/etc/nginx/templates/default.conf.template
@@ -16,6 +16,7 @@ map $request_uri $uri_full_path {
 # Remove a portion of request URL (if configured)
 map $uri_full_path $uri_path {
 	"~^$STRIP_LEADING_DIRECTORY_PATH(.*)"  $1;
+    default $uri_full_path;
 }
 
 map $S3_STYLE $s3_host_hdr {
