feat: Add new configuration option STRIP_LEADING_DIRECTORY_PATH. (#185)
Many thanks to https://github.com/elJosho for this contribution.

This will strip the leading directory from a request if configured.  It's useful when you're trying to expose a bucket at a specific path on an ALB.  For example, if I have an ALB rule that forwards all traffic from "www.mysite.com/mybucket" to the S3 gateway, and I want to request a file in the root of my bucket, "myfile.txt".  Making a request to "www.mysite.com/mybucket/myfile.txt" will fail as the S3 gateway will look for the file inside a folder named "mybucket", rather than at the root of the bucket.  

After this change, setting the new env var to
`STRIP_LEADING_DIRECTORY_PATH = /mybucket`
will send all requests to the root of the bucket.

---------

Co-authored-by: Josh Watt <josh.watt@moodys.com>

--- a/common/etc/nginx/templates/default.conf.template
+++ b/common/etc/nginx/templates/default.conf.template
@@ -9,8 +9,14 @@ include /etc/nginx/conf.d/gateway/v${AWS_SIGS_VERSION}_js_vars.conf;
 # Extracts only the path from the requested URI. This strips out all query
 # parameters and anchors in order to prevent extraneous data from being sent
 # to S3.
-map $request_uri $uri_path {
+map $request_uri $uri_full_path {
     "~^(?P<path>.*?)(\?.*)*$"  $path;
+}
+
+# Remove a portion of request URL (if configured)
+map $uri_full_path $uri_path {
+	"~^$STRIP_LEADING_DIRECTORY_PATH(.*)"  $1;
+    default $uri_full_path;
 }
 
 map $S3_STYLE $s3_host_hdr {
