use PREFIX_LEADING_DIRECTORY_PATH to serve only a sub-"directory" of a bucket
Thank you to @4141done for the suggestions! (#190)

--- a/Dockerfile.buildkit.plus
+++ b/Dockerfile.buildkit.plus
@@ -12,6 +12,8 @@ ENV PROXY_CACHE_VALID_NOTFOUND "1m"
 ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
 ENV CORS_ENABLED 0
 ENV DIRECTORY_LISTING_PATH_PREFIX ""
+ENV STRIP_LEADING_DIRECTORY_PATH ""
+ENV PREFIX_LEADING_DIRECTORY_PATH ""
 
 COPY plus/usr /usr
 
