--- a/common/etc/nginx/nginx.conf
+++ b/common/etc/nginx/nginx.conf
@@ -32,6 +32,7 @@ env PROXY_CACHE_VALID_FORBIDDEN;
 env HEADER_PREFIXES_TO_STRIP;
 env FOUR_O_FOUR_ON_EMPTY_BUCKET;
 env STRIP_LEADING_DIRECTORY_PATH;
+env PREFIX_LEADING_DIRECTORY_PATH;
 
 events {
     worker_connections  1024;
